[package]
name = "enso-client"
version = "0.1.0"
edition = "2024"
authors = ["Amartya Chowdhury (aether-flux) <amartya96@proton.me>"]
description = "Rust client library for connecting to and querying an Enso database over TCP."
license = "MIT"
readme = "README.md"
repository = "https://github.com/aether-flux/enso-client"
keywords = ["db", "database", "sdk", "sql", "dbms"]
homepage = "https://github.com/aether-flux/enso-client"
documentation = "https://github.com/aether-flux/enso-client#readme"
exclude = ["tests/*", "output/*", "docs/*", "target/*", ".github", ".gitignore"]

[dependencies]
serde_json = "1.0.149"
